--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,4 @@
-
-== README
+== README MORE
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
